Fixed photo alignment

--- a/media/css/style.css
+++ b/media/css/style.css
@@ -238,7 +238,7 @@ body {margin-top: 40px;}
 		#posts .photo img {
 			margin-top: 10px;
 			margin-bottom: 10px;
-			margin-left: -40px;
+			margin-left: -50px;
 			border: 10px rgba(250,250,250,0.9) solid;
 			width: 480px;
 		}
